# CPP_for_AXCF2152

./: CMakeLists.txt  README.md  plcnext.proj
ACFxml/: AcfTest.acf.config  AxfTest.acf.settings
src/: AcfTest.cpp  AcfTestComponent.cpp  AcfTestComponent.hpp  AcfTestProgram.cpp  AcfTestProgram.hpp  Arpfunction.cpp  Arpfunction.hpp
tools/: AutoDownload.sh  CMakeLists.txt  PLC_Control.sh  applog.sh  build_ACF_project.sh  testprogram.sh
